--- a/Mass Contact Transfer/src/pages/transferContacts.page
+++ b/Mass Contact Transfer/src/pages/transferContacts.page
@@ -7,26 +7,26 @@
 * Note: The columns displayed in the search results can be modified directly in this
 * VisualForce page, even in Production. See the note in the seach results section
 * further down in the page for more information.
-*  ------------------------------------------------------------------------------------- 
+*  -------------------------------------------------------------------------------------
 -->
 
     <!-- ********* JAVASCRIPT USED TO TOGGLE SELECTION OF SEARCH RESULTS ************ -->
     <script  type="text/javascript">
     function customSelectChecked(form, element_name, value)
-    {   
+    {
         var i = 0;
         for (i = 0; i < form.elements.length; i++) {
             if (form.elements[i].name.search('selected') > 0 && form.elements[i].disabled == false) {
                 form.elements[i].checked = value;
             }
         }
-    }    
+    }
     function customSelectAllOrNoneByCheckbox(form, element_name, control)
     {  customSelectChecked(form, element_name, control.checked); }
     </script>
-    
+
     <apex:form id="txfrContactsForm" >
-        <!-- 
+        <!--
         -- Comment/Uncomment one of the following two lines to enable debugging in page controller.
         --    DEGUGTRUE = Show SOQL statement and results of query
         -->
@@ -46,7 +46,7 @@
                 <apex:outputLabel >Transfer From User:</apex:outputLabel>
                 <apex:selectList value="{!fromUserID}" size="1" required="false" id="fromUserID">
                     <apex:selectOptions value="{!FromUsers}"></apex:selectOptions>
-                </apex:selectList>    
+                </apex:selectList>
             </apex:pageBlockSectionItem>
             <apex:pageBlockSectionItem id="ToUser">
                 <apex:outputLabel >Transfer To User:</apex:outputLabel>
@@ -79,7 +79,7 @@
             </apex:column>
             <apex:column width="5%"><apex:outputText value="{!criteria.Logical}"/></apex:column>
             <apex:column width="20%"><apex:outputText value="{!criteria.errMsg}" style="color:red;"/></apex:column>
-        </apex:dataTable>                 
+        </apex:dataTable>
         </apex:pageBlockSection>
 
         <apex:pageBlockSection columns="1" >
@@ -89,23 +89,30 @@
         <!-- ********* TRANSFER OPTIONS ************ -->
         <apex:pageBlockSection columns="2" title="Transfer Options" collapsible="false" id="Options">
             <apex:pageBlockSectionItem id="OptioneMail">
-	            <apex:inputCheckbox Value="{!sendeMailToOwner}" id="optSendeMail" title="Send eMail" />
+	            <apex:inputCheckbox Value="{!optSendeMailToOwner}" id="optSendeMail" title="Send eMail" />
                 <apex:outputText >Send an eMail to New Owner with List of Contacts</apex:outputText>
             </apex:pageBlockSectionItem>
+            <!-- 10/22/2009: New Option Added -->
+            <apex:pageBlockSectionItem >
+                <apex:inputCheckBox Value="{!optTxfrTasksNotesOwned}" selected="true"
+                title="Transfer Open Tasks, Notes and Attachments owned by the current owner to the new owner"/>
+                <apex:outputLabel >Transfer Contact Notes and Open Activities owned by the current Owner</apex:outputLabel>
+            </apex:pageBlockSectionItem>
+
         </apex:pageBlockSection>
     </apex:pageBlock>
     <!-- </apex:form> -->
-    
+
     <!-- ********* DISPLAY THE SEARCH RESULTS ************ -->
     <!-- Search Results Columns:
-    --     The Query in the Page Controller is written to include ALL fields from the Contact object 
+    --     The Query in the Page Controller is written to include ALL fields from the Contact object
     --     along with the following fields from the Account, Contact.Owner, and Account.Owner objects.
     --     The columns displayed in the list below can be changed by the user in the VisualForce page
     --     by just referencing the column name. The advantage is that the Apex code does not need to be
-    --     modified to do this, which means changes to the VF page can be made in Production without 
+    --     modified to do this, which means changes to the VF page can be made in Production without
     --     requiring redeploying the change from a Sandbox/Dev instance into Production.
     --            example: to add a custom field "practice", add or change a column to Results.contact.practice__c
-    -- 
+    --
     --     Additional Fields Available for use in Columns:
     --        contact.Account.Name, contact.Account.Site, contact.Account.Industry, contact.Account.Type
     --        contact.Owner.Name, contact.Owner.Alias
@@ -117,15 +124,15 @@
         <apex:pageBlockButtons >
             <apex:commandButton title="Transfer Selected" value="Transfer Selected" action="{!doTransfer}"/>
         </apex:pageBlockButtons>
-            <apex:dataTable value="{!searchResults}" var="Results" id="resultsDataTable" 
+            <apex:dataTable value="{!searchResults}" var="Results" id="resultsDataTable"
             styleClass="tableClass list"
             rowClasses="odd,even"
-            onrowmouseout="if (window.hiOff){hiOff(this);}" 
-            onrowmouseover="if (window.hiOn){hiOn(this);}"> 
+            onrowmouseout="if (window.hiOff){hiOff(this);}"
+            onrowmouseover="if (window.hiOn){hiOn(this);}">
                 <apex:facet name="caption"></apex:facet>
                 <apex:facet name="header"></apex:facet>
                 <apex:column >
-                    <apex:facet name="header"><apex:inputCheckbox id="selectall" selected="true" 
+                    <apex:facet name="header"><apex:inputCheckbox id="selectall" selected="true"
                         onclick="javascript:customSelectAllOrNoneByCheckbox(document.forms['MassTransferContactsPage:txfrContactsForm'],'MassTransferContactsPage:txfrContactsForm:resultsBlock:resultsDataTable:', this);"/></apex:facet>
                     <apex:inputCheckbox value="{!Results.selected}" id="selected" />
                 </apex:column>
@@ -152,7 +159,7 @@
             </apex:dataTable>
         <!-- </apex:pageBlock> -->
      </apex:pageBlock>
-     </apex:outputPanel>        
+     </apex:outputPanel>
      </apex:form>
 
 </apex:page>
