Modifications by Eric Peterson from centerstance: * Reduced unit test dataset from 10 contacts to 5 (we have triggers that were causing us to exceed the per-test governor limit of 500 total records retrieved when we ran the unit test) * Changed the order of transfer so that Contacts were transferred last.  This allowed me to compare the child record (Task/Note/Attachment) OwnerID to the Contact OwnerID, since it seemed like fromUserID variable wasn't always populated. * Included child records in the total records transferred count * Added support for transferring Events * Added testing support for Events * Added testing support for Attachments

--- a/Mass Contact Transfer/src/pages/transferContacts.page
+++ b/Mass Contact Transfer/src/pages/transferContacts.page
@@ -176,8 +176,8 @@ function customSelectChecked(form, element_name, value)
             <!-- 10/22/2009: New Option Added -->
             <apex:pageBlockSectionItem >
                 <apex:inputCheckBox Value="{!optTxfrTasksNotesOwned}" selected="true"
-                title="Transfer Open Tasks, Notes and Attachments owned by the current owner to the new owner"/>
-                <apex:outputLabel >Transfer Contact Notes and Open Activities owned by the current Owner</apex:outputLabel>
+                title="Transfer Open Tasks, Events, Notes and Attachments owned by the current owner to the new owner"/>
+                <apex:outputLabel >Transfer Open Tasks, Events, Notes and Open Activities owned by the current Owner</apex:outputLabel>
             </apex:pageBlockSectionItem>
 
         </apex:pageBlockSection>
